# recommender

./: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  tests.yml
recommender/: cli.py  config.py  logging.py
recommender/api/: app.py  engine.py  metrics.py  models.py  routes.py
recommender/model/: ann.py  embeddings.py  hybrid.py  tags.py
recommender/store/: layout.py  post_top_tags_store.py  reader.py  top_tags.py  writer.py
recommender/updater/: backfill.py  db.py  metrics.py  runner.py  state.py
scripts/: bump-version.py
tests/: test_compute_post_tags.py  test_embeddings.py  test_hybrid.py  test_intersect.py  test_post_top_tags_store.py  test_tag_vector.py  test_tag_vocab.py  test_top_tags.py
