[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recommender"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # CLI
    "typer>=0.12.0",
    # Database
    "psycopg[binary]>=3.1.0",
    "tenacity>=8.3.0",
    # ANN
    "hnswlib>=0.8.0",
    # Math
    "numpy>=1.26.0",
    # Serialization
    "orjson>=3.10.0",
    "zstandard>=0.22.0",
    # Observability
    "prometheus-client>=0.20.0",
    "structlog>=24.2.0",
]

[project.scripts]
recommender = "recommender.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["recommender"]

[tool.hatch.version]
path = "recommender/__init__.py"

[tool.ruff.lint]
select = ["E", "F", "I"]
